# airbnb-clone-backend

./: .gitignore  LICENSE
webapp/: pyproject.toml
webapp/bookings/admin/: __init__.py  booking.py
webapp/bookings/migrations/: 0001_initial.py  0002_alter_booking_experience_alter_booking_room.py
webapp/bookings/models/: booking.py
webapp/categories/: urls.py
webapp/categories/admin/: __init__.py  category.py
webapp/categories/migrations/: 0001_initial.py
webapp/categories/models/: category.py
webapp/categories/serializers/: category_serializer.py
webapp/categories/views/: __init__.py  categories_view.py  category_view.py  category_view_set.py
webapp/common/models/: __init__.py  common_model.py
webapp/config/: settings.py  urls.py
webapp/direct_messages/admin/: __init__.py  chatting_room.py  message.py
webapp/direct_messages/migrations/: 0001_initial.py
webapp/direct_messages/models/: __init__.py  chatting_room.py  message.py
webapp/experiences/admin/: __init__.py  experience.py  perk.py
webapp/experiences/migrations/: 0001_initial.py  0002_experience_price.py  0003_rename_detail_perk_details.py  0004_experience_category.py
webapp/experiences/models/: __init__.py  experience.py  perk.py
webapp/houses/: admin.py
webapp/houses/migrations/: 0001_initial.py  0002_rename_price_house_price_per_night_and_more.py
webapp/houses/models/: __init__.py  house.py
webapp/medias/admin/: __init__.py  photo.py  video.py
webapp/medias/migrations/: 0001_initial.py
webapp/medias/models/: photo.py  (+1 more)
webapp/rooms/: urls.py
webapp/users/: admin.py
(+34 files in other folders)
